Last LPA TP 05 excercise
Adding UVA 11857 Challenge

--- a/5º Período/PAA/TP05/.vscode/settings.json
+++ b/5º Período/PAA/TP05/.vscode/settings.json
@@ -5,6 +5,8 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "*.tcc": "cpp",
-        "limits": "cpp"
-    }
+        "limits": "cpp",
+        "iosfwd": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
