--- a/5º Período/PAA/TP05/pub.in
+++ b/5º Período/PAA/TP05/pub.in
@@ -14,4 +14,29 @@ Temple
 Picadilly Victoria 2 
 Temple Queensway 100 
 Temple
+3 1
+Picadilly
+Victoria
+Queensway
+Queensway Picadilly 20
+Picadilly
+3 1
+Picadilly
+Victoria
+Queensway
+Picadilly Victoria 2
+Picadilly
+3 1
+Picadilly
+Victoria
+Queensway
+Queensway Victoria 10
+Picadilly
+3 2
+Picadilly
+Victoria
+Queensway
+Queensway Victoria 10
+Queensway Picadilly 20
+Picadilly
 0 0 
